--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=5007
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/school_mgmt
+# DATABASE_URL=postgresql://postgres:postgres@localhost:5432/school_mgmt
+DATABASE_URL=postgresql://PraveenT:test@123@localhost:5432/praveendb
 JWT_ACCESS_TOKEN_SECRET=12345
 JWT_REFRESH_TOKEN_SECRET=12345678
 CSRF_TOKEN_SECRET=my_csrf_secret
